src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>c4g_Data_Sheets_Distributed__c</fullName>
        <label>Data Sheets Distributed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>c4g_Data_Sheets_Returned__c</fullName>
        <label>Data Sheets Returned</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cfg_Runner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The running fundraiser for the campaign.</inlineHelpText>
        <label>Runner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marathons</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddrive__Campaign_Datetime_Entered__c</fullName>
        <label>Campaign Date Entered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Campaign_Last_Modified_Datetime__c</fullName>
        <label>Campaign Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Campaign_URL__c</fullName>
        <formula>if(ddrive__Configuration__c &lt;&gt; null,
HYPERLINK(&quot;http://&quot; &amp; ddrive__Configuration__r.ddrive__Instance_Name__c &amp; &quot;.donordrive.com/event/&quot; &amp; RIGHT(ddrive__DonorDrive_ID__c, LEN(ddrive__DonorDrive_ID__c)- 
FIND(&apos;-&apos;, ddrive__DonorDrive_ID__c)-1),&quot;http://&quot; &amp; ddrive__Configuration__r.ddrive__Instance_Name__c &amp; &quot;.donordrive.com/event/&quot; &amp; RIGHT(ddrive__DonorDrive_ID__c, LEN(ddrive__DonorDrive_ID__c)- 
FIND(&apos;-&apos;, ddrive__DonorDrive_ID__c)-1)),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DD Instance</label>
        <referenceTo>ddrive__Configuration__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_ID__c</fullName>
        <label>Constituent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Part of DonorDrive integration</description>
        <label>Constituent Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DonorDrive Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Type__c</fullName>
        <label>Constituent Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Contact_Email__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ddrive__Contact_Person__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Contact_Phone_Ext__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Contact Phone Ext</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Contact_Phone__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Customized_Team_Fundraising_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customized Team Fundraising Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Participant_Fundraising_Goal_Percent__c</fullName>
        <label>Participant Fundraising Goal Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Participant_Manager_Relationship__c</fullName>
        <label>Participant Manager Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Participant_Sum_Donations_Made__c</fullName>
        <label>Participant Total Donated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Participant_Sum_Donations_Offline__c</fullName>
        <label>Participant Total Raised Offline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Participant_Sum_Donations_Online__c</fullName>
        <label>Participant Total Raised Online</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Registration_Processing_Fee_Paid__c</fullName>
        <label>Registration Processing Fee Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Team_Fundraising_Goal_Percentage__c</fullName>
        <label>Team Fundraising Goal Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Cut_Off_Datetime__c</fullName>
        <label>Donation Cut Off Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Connected_To_Facebook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connected to Facebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Connected_to_Twitter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connected to Twitter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Constituent_Email__c</fullName>
        <label>Constituent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Customized_Fundraising_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customized Fundraising Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Event_Time_Zone__c</fullName>
        <label>Event Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_ID__c</fullName>
        <externalId>true</externalId>
        <label>DonorDrive ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Is_Returning_Participant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Returning Participant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Num_Donors__c</fullName>
        <label>Donors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Num_Event_Donors__c</fullName>
        <label>Event Donors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Num_Participant_Donors__c</fullName>
        <label>Participant Donors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Num_Participants__c</fullName>
        <label>Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Num_Team_Donors__c</fullName>
        <label>Team Donors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Num_Teams__c</fullName>
        <label>Teams</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_Constituent_ID__c</fullName>
        <label>Participant Constituent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_Managed_By__c</fullName>
        <label>Participant Managed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_Num_Team_Members__c</fullName>
        <label>Participant Teammate Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_Sum_Donations__c</fullName>
        <label>Participant Total Raised</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_Sum_Pledges__c</fullName>
        <label>Participant Total Pledges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Participant_URL_Alias__c</fullName>
        <label>Participant URL Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Previous_Event_ID__c</fullName>
        <label>Previous Event ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Previous_Event_Name__c</fullName>
        <label>Previous Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Source_Participant_ID__c</fullName>
        <label>Source Participant ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Sum_Donations__c</fullName>
        <label>Total Raised</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Num_Donations__c</fullName>
        <label>Team Donation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Num_Participants__c</fullName>
        <label>Team Participant Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Sum_Donations_Offline__c</fullName>
        <label>Team Total Raised Offline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Sum_Donations_Online__c</fullName>
        <label>Team Total Raised Online</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Sum_Donations__c</fullName>
        <label>Team Total Raised</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_URL_Alias__c</fullName>
        <label>Team URL Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Campaign__c</fullName>
        <formula>If($RecordType.Name = &apos;DD Events&apos;, Name, 
IF(!isBlank(Parent.Parent.Id), HYPERLINK(&quot;/&quot; + Parent.Parent.Id,  Parent.Parent.Name, &apos;_self&apos;), 
IF(AND(!isBlank(Parent.Id), Parent.RecordType.Name = &apos;DD Events&apos;), HYPERLINK(&quot;/&quot; + Parent.Id,  Parent.Name, &apos;_self&apos;),
&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_ID__c</fullName>
        <label>Event ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Name__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_URL_Alias__c</fullName>
        <label>Event URL Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Fiscal_Year__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Fundraising_Goal__c</fullName>
        <label>Fundraising Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__Fundraising_URL__c</fullName>
        <formula>IF(AND(ddrive__Configuration__c &lt;&gt; null, CONTAINS(ddrive__DonorDrive_ID__c, ddrive__Configuration__r.ddrive__Instance_Name__c &amp; &quot;-p&quot;)),
HYPERLINK(&quot;http://&quot; &amp; ddrive__Configuration__r.ddrive__Instance_Name__c &amp; &quot;.donordrive.com/participant/&quot; &amp; RIGHT(ddrive__DonorDrive_ID__c, LEN(ddrive__DonorDrive_ID__c)-
FIND(&apos;-&apos;, ddrive__DonorDrive_ID__c)-1) ,&quot;http://&quot; &amp; ddrive__Configuration__r.ddrive__Instance_Name__c &amp; &quot;.donordrive.com/participant/&quot; &amp; RIGHT(ddrive__DonorDrive_ID__c, LEN(ddrive__DonorDrive_ID__c)-
FIND(&apos;-&apos;, ddrive__DonorDrive_ID__c)-1)),
IF(AND(ddrive__Configuration__c &lt;&gt; null, CONTAINS(ddrive__DonorDrive_ID__c, ddrive__Configuration__r.ddrive__Instance_Name__c &amp; &quot;-i&quot;)),
HYPERLINK(&quot;http://&quot; &amp; ddrive__Configuration__r.ddrive__Instance_Name__c &amp; &quot;.donordrive.com/campaign/&quot; &amp; RIGHT(ddrive__DonorDrive_ID__c, LEN(ddrive__DonorDrive_ID__c)-
FIND(&apos;-&apos;, ddrive__DonorDrive_ID__c)-1) ,&quot;http://&quot; &amp; ddrive__Configuration__r.ddrive__Instance_Name__c &amp; &quot;.donordrive.com/campaign/&quot; &amp; RIGHT(ddrive__DonorDrive_ID__c, LEN(ddrive__DonorDrive_ID__c)-
FIND(&apos;-&apos;, ddrive__DonorDrive_ID__c)-1)),&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fundraising URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of DonorDrive integration</description>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Max_of_Participants__c</fullName>
        <label>Max # of Participants</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Max_of_Teams__c</fullName>
        <label>Max # of Teams</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Organization_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Organization Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Entered_by__c</fullName>
        <label>Participant Entered by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Fundraising_Goal__c</fullName>
        <label>Participant Fundraising Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Registered_Offline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participant Registered Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Registration_Datetime__c</fullName>
        <label>Participant Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Registration_Fee_Promo_Code__c</fullName>
        <label>Participant Registration Fee Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Registration_Fee__c</fullName>
        <label>Participant Registration Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Registration_Source__c</fullName>
        <label>Participant Registration Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Type_Code__c</fullName>
        <label>Participant Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Participant_Type__c</fullName>
        <label>Participant Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Prize_Code__c</fullName>
        <label>Prize Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Prize_Description__c</fullName>
        <label>Prize Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Prize_Option_Code__c</fullName>
        <label>Prize Option Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Prize_Option_Description__c</fullName>
        <label>Prize Option Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Program_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Referrer_Host__c</fullName>
        <label>Referrer Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Referrer_Path__c</fullName>
        <label>Referrer Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Referrer_Token__c</fullName>
        <label>Referrer Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Registration_Cut_Off_Datetime__c</fullName>
        <label>Registration Cut Off Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Site_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Site Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Team_Captain_Email__c</fullName>
        <label>Team Captain Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Team_Captain_First_Name__c</fullName>
        <label>Team Captain First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Team_Captain_ID__c</fullName>
        <label>Team Captain ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Team_Captain_Last_Name__c</fullName>
        <label>Team Captain Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Team_Captain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Team Captain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Team_Fundraising_URL__c</fullName>
        <formula>IF(AND(ddrive__Configuration__c &lt;&gt; null, CONTAINS(ddrive__DonorDrive_ID__c, ddrive__Configuration__r.ddrive__Instance_Name__c &amp; &quot;-m&quot;)),
HYPERLINK(&quot;http://&quot; &amp; ddrive__Configuration__r.ddrive__Instance_Name__c &amp; &quot;.donordrive.com/team/&quot; &amp; RIGHT(ddrive__DonorDrive_ID__c, LEN(ddrive__DonorDrive_ID__c)-
FIND(&apos;-&apos;, ddrive__DonorDrive_ID__c)-1),&quot;http://&quot; &amp; ddrive__Configuration__r.ddrive__Instance_Name__c &amp; &quot;.donordrive.com/team/&quot; &amp; RIGHT(ddrive__DonorDrive_ID__c, LEN(ddrive__DonorDrive_ID__c)-
FIND(&apos;-&apos;, ddrive__DonorDrive_ID__c)-1)),
IF(AND(ddrive__Configuration__c &lt;&gt; null, CONTAINS(ddrive__DonorDrive_ID__c, ddrive__Configuration__r.ddrive__Instance_Name__c &amp; &quot;-p&quot;),ddrive__Team_Id__c &lt;&gt; null),
HYPERLINK(&quot;http://&quot; &amp; ddrive__Configuration__r.ddrive__Instance_Name__c &amp; &quot;.donordrive.com/team/&quot; &amp; RIGHT(ddrive__Team_Id__c, LEN(ddrive__Team_Id__c)-
FIND(&apos;-&apos;, ddrive__Team_Id__c)-1),&quot;http://&quot; &amp; ddrive__Configuration__r.ddrive__Instance_Name__c &amp; &quot;.donordrive.com/team/&quot; &amp; RIGHT(ddrive__Team_Id__c, LEN(ddrive__Team_Id__c)-
FIND(&apos;-&apos;, ddrive__Team_Id__c)-1)),&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Fundraising URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Team_Id__c</fullName>
        <label>Team ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Team_Name__c</fullName>
        <label>Team Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Team_Type__c</fullName>
        <label>Team Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Venue_Address__c</fullName>
        <label>Venue Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Venue__c</fullName>
        <label>Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>DD_Participants</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>ddrive__Event_Campaign__c</columns>
        <columns>ddrive__Participant_Registration_Datetime__c</columns>
        <columns>ddrive__DonorDrive_Participant_Sum_Donations__c</columns>
        <columns>ddrive__Participant_Fundraising_Goal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.ddrive__DD_Participants</value>
        </filters>
        <label>DD Participants</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>ddrive__DD_Events</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.ddrive__DD_Events</value>
        </filters>
        <label>DD Events</label>
    </listViews>
    <listViews>
        <fullName>ddrive__DD_Personal_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.ddrive__DD_Personal_Campaigns</value>
        </filters>
        <label>DD Personal Campaigns</label>
    </listViews>
    <listViews>
        <fullName>ddrive__DD_Registrations</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.ddrive__DD_Participants</value>
        </filters>
        <label>DD Registrations</label>
    </listViews>
    <listViews>
        <fullName>ddrive__DD_Teams</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.ddrive__Team</value>
        </filters>
        <label>DD Teams</label>
    </listViews>
    <recordTypes>
        <fullName>Marathon</fullName>
        <active>true</active>
        <description>A campaign for use in tracking specific runners</description>
        <label>Marathon</label>
    </recordTypes>
    <recordTypes>
        <fullName>c4g_Fundraising_Goal</fullName>
        <active>true</active>
        <description>A campaign used for tracking fundraising goals</description>
        <label>Fundraising Goal</label>
    </recordTypes>
    <recordTypes>
        <fullName>ddrive__DD_Events</fullName>
        <active>true</active>
        <label>DD Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>ddrive__DD_Participants</fullName>
        <active>true</active>
        <label>DD Participants</label>
    </recordTypes>
    <recordTypes>
        <fullName>ddrive__DD_Personal_Campaigns</fullName>
        <active>true</active>
        <label>DD Personal Campaigns</label>
    </recordTypes>
    <recordTypes>
        <fullName>ddrive__Team</fullName>
        <active>true</active>
        <label>DD Teams</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>